Security hardening: fix critical and high-severity vulnerabilities
- Remove hardcoded secrets; fail in production if not set via environment
- Fix CORS configuration to use ALLOWED_ORIGINS env variable
- Add TRUSTED_PROXY_IPS for secure X-Forwarded-For handling
- Fix path traversal vulnerability with safe_join() function
- Update Next.js to 16.1.6 to patch CVE vulnerabilities
- Add security headers middleware (CSP, X-Frame-Options, HSTS, etc.)
- Strengthen password requirements (8+ chars, upper, lower, digit)
- Fix token storage to use authStore instead of direct localStorage
- Add JSON schema validation for settings import
- Add ErrorBoundary component for graceful error handling
- Add rate limiting to sensitive auth endpoints
- Mask database credentials in logs
- Create comprehensive .env.example templates
- Update auth tests for new password requirements

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,41 @@
-# Environment: "development" or "production"
+# MorphoStruct Backend Environment Variables
+# Copy this file to .env and fill in the values
+
+# =============================================================================
+# REQUIRED IN PRODUCTION
+# =============================================================================
+
+# Environment: development, staging, production
 ENV=development
 
-# LLM Provider: "anthropic" or "openai"
-LLM_PROVIDER=anthropic
+# Security secrets - REQUIRED in production
+# Generate with: python -c "import secrets; print(secrets.token_hex(32))"
+JWT_SECRET_KEY=
+ENCRYPTION_SECRET=
 
-# API Keys (set the one for your chosen provider)
-ANTHROPIC_API_KEY=your-anthropic-key-here
-OPENAI_API_KEY=your-openai-key-here
+# =============================================================================
+# CORS & NETWORK
+# =============================================================================
 
-# Optional: Override default model
-# LLM_MODEL=claude-sonnet-4-20250514
+# Comma-separated list of allowed frontend origins
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-DEBUG=true
+# Trusted proxy IPs for X-Forwarded-For header (comma-separated)
+# Only set this if behind a reverse proxy (nginx, cloudflare, etc.)
+# Example: TRUSTED_PROXY_IPS=10.0.0.1,10.0.0.2
+TRUSTED_PROXY_IPS=
 
-# Security: Required in production
-# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET_KEY=your-jwt-secret-key-here
-ENCRYPTION_SECRET=your-encryption-secret-here
+# =============================================================================
+# DATABASE
+# =============================================================================
 
-# Optional: JWT token expiration in minutes (default: 1440 = 24 hours)
-# ACCESS_TOKEN_EXPIRE_MINUTES=1440
+# SQLite (development) or PostgreSQL (production)
+DATABASE_URL=sqlite:///./morphostruct.db
+# DATABASE_URL=postgresql://user:password@localhost:5432/morphostruct
+
+# =============================================================================
+# OPTIONAL - PRODUCTION SCALING
+# =============================================================================
+
+# Redis for distributed rate limiting (required for multi-instance deployments)
+# REDIS_URL=redis://localhost:6379/0
